--- a/src/index.css
+++ b/src/index.css
@@ -12,5 +12,8 @@ body {
 body {
   min-height: 100vh;
   background-color: #1C1C1C;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
