--- a/src/components/Info.module.css
+++ b/src/components/Info.module.css
@@ -33,12 +33,33 @@
   font-size: 13px;
   line-height: 15px;
   font-family: Inter;
-  
 }
 
 .contact {
-    color: #F5F5F5;
-    line-height: 150%;
-    font-size: 10px;
-    font-weight: 400px;
+  color: #f5f5f5;
+  line-height: 150%;
+  font-size: 10px;
+  font-weight: 400px;
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 16px;
+  padding: 9px 13px 9px 11px;
+  width: 247px;
+  border: 1px solid #d1d5db;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 6px;
+}
+i {
+    width: 16px;
+    margin-right: 8px;
+}
+span {
+    width: 36px;
+    font-weight: 500;
+    font-size: 14px;
+    color: #374151;
 }
