--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  height: 868px;
+  /* height: 868px; */
   width: 550px;
   margin: 0 auto;
   background-color: #23252c;
