--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
 }
 body {
   min-height: 100vh;
-  background-color: #1C1C1C;
+  background-color: #E5E5E5;
   display: flex;
   justify-content: center;
   align-items: center;
