--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -4,4 +4,11 @@
   position: absolute;
   background: #ffffff;
   box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.image {
+    margin-left: 30px;
 }
