--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,9 @@
+.card_list {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 10px;
+    overflow-x: auto;
+  }
 .app_container {
 position: relative;
 width: 550px;
