--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -1,10 +1,17 @@
+
+
 .card {
   display: flex;
+  flex: 0 0 auto;
   flex-direction: column;
-  width: 176px;
+  width: 175px;
   font-size: 12px;
+  margin-top: 100px;
 }
-
+.ard_title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .card__person {
   width: 100%;
   margin-top: 49px;
@@ -12,6 +19,7 @@
   border-radius: 9px;
 }
 .card__stats {
+  display: flex;
   margin-top: 8px;
   align-items: center;
 }
