--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -1,5 +1,3 @@
-
-
 .card {
   display: flex;
   flex: 0 0 auto;
@@ -7,6 +5,7 @@
   width: 175px;
   font-size: 12px;
   margin-top: 100px;
+  position: relative;
 }
 .ard_title {
   overflow: hidden;
@@ -32,13 +31,14 @@
   border-radius: 0.5px;
 }
 .gray {
+  margin-left: 5px;
   color: #918e9b;
 }
 .bold {
   font-weight: 700;
 }
 .card__bio {
-    font-size: 11px;
+  font-size: 11px;
   width: 175px;
   margin-left: 36px;
   color: #222222;
@@ -47,4 +47,14 @@
 
 img span {
   padding: 2px;
+}
+
+.card_badge {
+  position: absolute;
+  top: 53px;
+  left: 46px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
 }
